--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,36 @@
+body{
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+}
+
+
+/******************************Header Section****************/
+header{
+    position: absolute;
+    left: 0;
+    right: 0;
+    z-index: 1;
+
+}
+#header-logo{
+    height: 20px;
+}
+header a {
+    color: white;
+    margin-left: 24px;
+}
+header a:hover{
+    color: white;
+}
+
+
+
 /******************************Hero Section****************/
 #hero-section{
     background-image:url(../img/hero.jpg) ;
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
+    z-index: 1;
 }
 
 #hero-section::before{
@@ -13,8 +40,9 @@
     right: 0;
     top: 0;
     bottom: 0;
-    background: #41333240;
+    background: #00000040;
     height: 100vh;
+    z-index: 0;
     
 }
 
@@ -30,4 +58,7 @@
     margin: auto;
     display: block;
     width: 64px;
+}
+#white-text{
+    z-index: 1;
 }
