--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,12 @@ header a:hover{
     width: 32px;
 }
 
+.solid-header{
+    position: fixed;
+    background-color:#121212;
+    transition: background-color 0.4s ease-in;
+}
+
 
 
 /******************************Hero Section****************/
@@ -44,7 +50,7 @@ header a:hover{
     right: 0;
     top: 0;
     bottom: 0;
-    background: #00000040;
+    background: #3c2b2bb8;
     height: 100vh;
     z-index: 0;
     
@@ -71,6 +77,13 @@ header a:hover{
 
 #intro-section{
     background: #eae7de;
+}
+.intro-icon{
+    width: 96px;
+}
+
+.intro-icon:hover{
+    transform: scale(1.1);
 }
 /******************************About Section****************/
 #about-bg-1{
